# csad2425ki404zelenyytr10

./: CMakeLists.txt  CSAD task1 Zelenyy 07.docx  Doxyfile  README.md  build_and_upload.bat
.github/workflows/: ci.yaml
client/: CMakeLists.txt
client/include/: board.h  communication.h  console_utils.h  format_message.h  game_manager.h  game_modes.h  player.h
client/src/: board.cpp  client.cpp  communication.cpp  console_utils.cpp  format_message.cpp  game_manager.cpp  game_modes.cpp  player.cpp
client/tests/: test_board.cpp  test_communication.cpp  test_console_utils.cpp  test_format_message.cpp  test_game_manager.cpp  test_game_modes.cpp  test_player.cpp
config/: config.xml
coveradge/client/: coverage.html
coveradge/server/: coverage.html
reports/task2/: CSAD task2 Zelenyy 07.docx
reports/task3/: CSAD task3 Zelenyy 07.docx
reports/task4/: CSAD task4 Zelenyy 07.docx
reports/task5/: CSAD task5 Zelenyy 07.docx
server/: CMakeLists.txt  platformio.ini  server.ino
server/include/: mock_arduino.h  server_logic.h
server/src/: server_logic.cpp
server/test/: test_server_logic.cpp
